Add globalSettings
